# wrtstat

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Readme.md  index.html  wamba-ci.json
.ci/: automr.sh  cppcheck.sh  getlib  suppressions.txt
.cppcheck/: exclude_folders.txt  suppressions.txt
.github/: build_history.txt
benchmarks/: CMakeLists.txt  bm_aggregator.cpp  bm_reduce.cpp
cmake/: AUX.cmake  ConfigureLibrary.cmake  WRTSTAT.cmake  ci.cmake  mambaru.cmake
cov-report/: index-sort-f.html  index-sort-l.html  index.html
cov-report/tests/: aggregator_suite.cpp.func-sort-c.html  aggregator_suite.cpp.func.html  aggregator_suite.cpp.gcov.html  agmap_suite.cpp.func-sort-c.html  agmap_suite.cpp.func.html  agmap_suite.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  reducer_suite.cpp.func-sort-c.html  reducer_suite.cpp.func.html  reducer_suite.cpp.gcov.html  separator_suite.cpp.func-sort-c.html  separator_suite.cpp.func.html  separator_suite.cpp.gcov.html  test_wrtstat.cpp.func-sort-c.html  test_wrtstat.cpp.func.html  test_wrtstat.cpp.gcov.html  wrtstat_suite.cpp.func-sort-c.html  wrtstat_suite.cpp.func.html  wrtstat_suite.cpp.gcov.html
cov-report/wrtstat/: aggregated_data.hpp.func-sort-c.html  aggregated_data.hpp.func.html  aggregated_data.hpp.gcov.html  aggregator.cpp.func-sort-c.html  aggregator.cpp.func.html  aggregator.cpp.gcov.html  aggregator.hpp.func-sort-c.html  aggregator.hpp.func.html  aggregator.hpp.gcov.html  aggregator_options.hpp.func-sort-c.html  aggregator_options.hpp.func.html  aggregator_options.hpp.gcov.html  allocator.hpp.func-sort-c.html  allocator.hpp.func.html  allocator.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  meter_manager.cpp.func-sort-c.html  meter_manager.cpp.func.html  meter_manager.cpp.gcov.html  meter_manager.hpp.func-sort-c.html  meter_manager.hpp.func.html  meter_manager.hpp.gcov.html  reduced_data.hpp.func-sort-c.html  reduced_data.hpp.func.html  reduced_data.hpp.gcov.html  reducer.cpp.func-sort-c.html  reducer.cpp.func.html  reducer.cpp.gcov.html  reducer.hpp.func-sort-c.html  reducer.hpp.func.html  reducer.hpp.gcov.html  reducer_options.hpp.func-sort-c.html  reducer_options.hpp.func.html  reducer_options.hpp.gcov.html  separator.cpp.func-sort-c.html  separator.cpp.func.html  separator.cpp.gcov.html  separator.hpp.func-sort-c.html  (+8 more)
cov-report/wrtstat/json/: index-sort-f.html  index-sort-l.html  index.html  load.cpp.func-sort-c.html  load.cpp.func.html  load.cpp.gcov.html  wrtstat_options_json.hpp.func-sort-c.html  wrtstat_options_json.hpp.func.html  wrtstat_options_json.hpp.gcov.html
cov-report/wrtstat/manager/: aggregator_hashmap.cpp.func-sort-c.html  aggregator_hashmap.cpp.func.html  aggregator_hashmap.cpp.gcov.html  aggregator_hashmap.hpp.func-sort-c.html  aggregator_hashmap.hpp.func.html  aggregator_hashmap.hpp.gcov.html  aggregator_map.cpp.func-sort-c.html  aggregator_map.cpp.func.html  aggregator_map.cpp.gcov.html  aggregator_map.hpp.func-sort-c.html  aggregator_map.hpp.func.html  (+16 more)
examples/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp  example8.cpp  example_j.cpp
tests/: CMakeLists.txt  aggregator_suite.cpp  agmap_suite.cpp  basic_suite.cpp  json_suite.cpp  multi_aggregator_suite.cpp  packer_suite.cpp  reducer_suite.cpp  separator_suite.cpp  test_wrtstat.cpp  wrtstat_suite.cpp
wrtstat/: CMakeLists.txt  aggregated_data.hpp  aggregator.cpp  aggregator.hpp  aggregator_map.hpp  aggregator_options.hpp  allocator.hpp  collector.hpp  dict.hpp  manager.hpp  map_aggregators.hpp  map_aggregators_options.hpp  meter_manager.cpp  meter_manager.hpp  multi_meter.hpp  pair_meter.hpp  pool.hpp  reduced_data.hpp  reducer.cpp  reducer.hpp  reducer_options.hpp  separator.cpp  separator.hpp  separator_options.hpp  size_meter.hpp  time_meter.hpp  types.hpp  version.hpp  wrtstat.cpp  wrtstat.hpp  wrtstat_options.hpp  wrtstat_options_json.hpp
wrtstat/aggregator/: aggregator.cpp  aggregator.hpp  aggregator_mt.cpp  aggregator_mt.hpp  aggregator_registry.cpp  aggregator_registry.hpp  basic_aggregator.cpp  basic_aggregator.hpp  reducer.cpp  reducer.hpp  separator.cpp  separator.hpp
wrtstat/aggregator/api/: aggregated_data.hpp  aggregated_info.hpp  aggregated_perc.hpp  reduced_data.hpp  reduced_info.hpp  types.hpp
wrtstat/aggregator/api/json/: aggregated_data_json.hpp  aggregated_data_json_compact.hpp  aggregated_info_json.hpp  aggregated_info_json_compact.hpp  aggregated_perc_json.hpp  aggregated_perc_json_compact.hpp  reduced_data_json.hpp  reduced_data_json_compact.hpp  reduced_info_json.hpp  reduced_info_json_compact.hpp
wrtstat/aggregator/options/: aggregator_options.hpp  aggregator_options_json.hpp  reducer_options.hpp  reducer_options_json.hpp  registry_options.hpp  registry_options_json.hpp  resolution_json.hpp  separator_options.hpp  separator_options_json.hpp
wrtstat/api/: del.hpp  del_json.hpp  del_json_compact.hpp  multi_push.hpp  multi_push_json.hpp  multi_push_json_compact.hpp  push.hpp  push_json.hpp  push_json_compact.hpp
wrtstat/json/: load.cpp  load.hpp  wrtstat_options_json.hpp
wrtstat/manager/: aggregator_hashmap.cpp  aggregator_hashmap.hpp  aggregator_hashmap_options.hpp  aggregator_map.cpp  aggregator_map.hpp  aggregator_map_options.hpp  aggregator_registry.cpp  aggregator_registry.hpp  dict.hpp  manager.hpp  manager_options.hpp  pool.hpp
wrtstat/manager/mutex/: empty_mutex.hpp  rwlock.hpp
wrtstat/meters/: composite_meter.hpp  factory_pool.hpp  multi_meter.hpp  pair_meter.hpp  size_meter.hpp  time_meter.hpp  value_meter.hpp
wrtstat/multi_aggregator/: basic_multi_aggregator.cpp  basic_multi_aggregator.hpp  multi_aggregator.cpp  multi_aggregator.hpp  multi_aggregator_options.hpp  multi_aggregator_options_json.hpp
wrtstat/multi_packer/: basic_packer.cpp  basic_packer.hpp  packer_options.hpp  packer_options_json.hpp
wrtstat/options/: load_options.cpp  load_options.hpp
wrtstat/system/: allocator.hpp  dict.hpp  empty_mutex.hpp  pool.hpp  rwlock.hpp  spinlock.hpp
(+27 files in other folders)
