set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")

add_executable(example1 example1.cpp)
add_executable(example2 example2.cpp)
add_executable(example3 example3.cpp)
add_executable(example4 example4.cpp)
add_executable(example5 example5.cpp)
add_executable(example6 example6.cpp)
add_executable(example7 example7.cpp)
add_executable(example8 example8.cpp)
add_executable(example9 example9.cpp)

target_link_libraries(example1 wrtstat)
target_link_libraries(example2 wrtstat)
target_link_libraries(example3 wrtstat)
target_link_libraries(example4 wrtstat)
target_link_libraries(example5 wrtstat)
target_link_libraries(example6 wrtstat)
target_link_libraries(example7 wrtstat)
target_link_libraries(example8 wrtstat)
target_link_libraries(example9 wrtstat)

